fix(angular/lightbox): fix height calculation on mobile

--- a/src/angular/lightbox/lightbox.scss
+++ b/src/angular/lightbox/lightbox.scss
@@ -18,10 +18,6 @@
   width: 100%;
   height: 100%;
 
-  // The lightbox should always cover the entire viewbox.
-  min-height: 100vh;
-  max-height: 100vw;
-
   @include cdk.high-contrast(active, off) {
     outline: solid sbb.pxToRem(1);
   }
